[gd_scene load_steps=2 format=3 uid="uid://d28y5pw2tviod"]

[ext_resource type="Script" path="res://UI/ui.gd" id="1_kmdk8"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kmdk8")

[node name="Label_player_experience" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Label_player_level" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Label_player_money" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Label_player_zakidkaY" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Label_player_current_weight" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Label_player_max_weight" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
